--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -95,6 +95,7 @@
     display: flex;
     column-gap: 15px;
     margin-right: 20px;
+    list-style: none;
   }
 }
 
